# parameterParser

./: .gitignore  CMakeLists.txt  README.md
Debug/: create_makefile.sh
Release/: create_makefile.sh
cmake/: CompilerWarnings.cmake  Sanitizers.cmake
include/: parameterFile.h  parser.h  parserErrors.h
include/CXX17/: optional.h
include/stc/: optional.h
src/: CMakeLists.txt  main.cpp
